# CE_V5

./: .dependency-cruiser.cjs  .env.example  .gitattributes  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
contracts/: README.md  VERSIONING.md
contracts/schemas/: alert_raised.schema.json  api_capabilities.schema.json  api_error.schema.json  api_login_request.schema.json  api_me.schema.json  api_realtime_ack.schema.json  api_realtime_auth.schema.json  api_realtime_error.schema.json  api_realtime_event.schema.json  api_realtime_subscribe.schema.json  api_register_request.schema.json  api_session.schema.json  component_lifecycle.schema.json  envelope.schema.json  family.schema.json  market_candle_closed.schema.json  market_candle_corrected.schema.json  market_candle_updated.schema.json  market_footprint_closed.schema.json  market_footprint_corrected.schema.json  market_orderbook_frontier.schema.json  market_orderbook_resynced.schema.json  policy_kill_switch.schema.json  policy_subject_invalidated.schema.json  policy_version_published.schema.json  rule_evaluation_completed.schema.json  rule_firing.schema.json  rule_quarantined.schema.json  rule_resolved.schema.json  signal_raised.schema.json  user_registered.schema.json
contracts/source/: __init__.py
docs/: BARRIDO_SEGURIDAD_P07.md  BARRIDO_SEGURIDAD_T03_BYBIT.md  BARRIDO_SEGURIDAD_T03_OKX.md  DOC_ARQ_V5.md  DOC_ENTREGABLES_V5.md  DOC_ESTRUCTURA_V5.md  DOC_ROADMAP_V5.md  README.md
docs/adr/: ADRS_PROPUESTOS.md
frontend/: package.json  vite.config.ts
tools/: check_audit.py  check_component_docs.py  check_contract_artifacts.py  check_envelope_base_usage.py  check_event_payload_registry.py  check_generated.py  check_generated_ts.mjs  check_identity_access.py  check_manifests.py  check_market_access.py  check_orphans.py  check_rules_access.py  check_schema_compat.py  check_tenancy.py  check_types_frontend.mjs  ci_local.py  gen_schemas.py  gen_ts_types.mjs  probe_binance_live.py  probe_bybit_live.py  probe_okx_live.py  run_p06b_hot_validation.py  seed_p06_fake.py  seed_p06b_fake.py  show_p06_audit.py  validate_binance_trades_live.py  validate_bybit_live.py  validate_bybit_trades_live.py  validate_footprint_live.py  validate_okx_live.py  validate_okx_trades_live.py  validate_orderbook_live.py  validate_p02b_outbox.py  validate_p05_tenancy.py  validate_p06b_api.py  validate_p07_binance_live.py  validate_p07_hot.py  validate_rules_correction.py  validate_rules_cycle.py  validate_rules_hot.py  (+2 more)
(+394 files in other folders)
