[project]
name = "ce_v5"
version = "0.0.0"
description = "Crypto Engine V5 - plataforma cuantitativa multiusuario (esqueleto P00)."
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "redis==8.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "mypy==2.2.0",
    "pytest==9.1.1",
    "import-linter==2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/ce_v5", "contracts/source"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["backend/src", "contracts", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["backend/src", "contracts", "tools"]
explicit_package_bases = true
files = ["backend/src/ce_v5", "contracts/source", "tools", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/src/ce_v5/components"]
pythonpath = ["backend/src", "contracts", "tools"]

[tool.importlinter]
root_packages = ["ce_v5"]

[[tool.importlinter.contracts]]
name = "Fronteras de capa backend (DOC_ESTRUCTURA sec.6, ADR-002)"
type = "layers"
layers = [
    "ce_v5.entrypoints",
    "ce_v5.infra | ce_v5.platform | ce_v5.components",
    "ce_v5.core",
]
